# System-stat-utility

./: Cargo.toml  README.md
src/: cpu_data.rs  disk_data.rs  main.rs  process_data.rs  ram_data.rs  sys_data.rs
src/system_utils/: cpu_data.rs  disk_data.rs  mod.rs  process_data.rs  ram_data.rs  sys_data.rs
