[package]
name = "system_stat"
version = "0.1.0"
edition = "2024"
description = "An easy and helpful util, that helps get varios data about system."
repository = "https://github.com/Maxdgf/System-stat-utility"

[dependencies]
sysinfo = "0.39.0"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.29.0"

[profile.release]
codegen-units = 1
strip = true